PR 57927: when comparing old and new partition state during renumbering, ignore differences in the install target flag - the backend might have flipped it off already to ensure only a single partition is marked as install target.