usr.sbin/sysinst/label.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: label.c,v 1.50 2023/11/20 18:03:55 martin Exp $	*/
+/*	$NetBSD: label.c,v 1.51 2024/02/14 13:52:11 martin Exp $	*/
 
 /*
  * Copyright 1997 Jonathan Stone
@@ -36,7 +36,7 @@
 
 #include <sys/cdefs.h>
 #if defined(LIBC_SCCS) && !defined(lint)
-__RCSID("$NetBSD: label.c,v 1.50 2023/11/20 18:03:55 martin Exp $");
+__RCSID("$NetBSD: label.c,v 1.51 2024/02/14 13:52:11 martin Exp $");
 #endif
 
 #include <sys/types.h>
@@ -510,7 +510,8 @@ renumber_partitions(struct partition_usage_set *pset)
 		for (i = 0; i < pset->num; i++) {
 			if (pset->infos[i].cur_start != info.start)
 				continue;
-			if (pset->infos[i].cur_flags != info.flags)
+			if ((pset->infos[i].cur_flags & ~PTI_INSTALL_TARGET)
+			    != (info.flags & ~PTI_INSTALL_TARGET))
 				continue;
 			if ((info.flags & PTI_SPECIAL_PARTS) !=
 			    (pset->infos[i].flags & PTI_SPECIAL_PARTS))
